--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/RPG2.loader.js";
+      var loaderUrl = buildUrl + "/rpg.loader.js";
       var config = {
-        dataUrl: buildUrl + "/RPG2.data",
-        frameworkUrl: buildUrl + "/RPG2.framework.js",
-        codeUrl: buildUrl + "/RPG2.wasm",
+        dataUrl: buildUrl + "/rpg.data",
+        frameworkUrl: buildUrl + "/rpg.framework.js",
+        codeUrl: buildUrl + "/rpg.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Multiplayer RPG Project",
